// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders given a basic type 1`] = `
<code
  className="sc-bdVaJa eOofRl"
>
  <div
    className="sc-bxivhb dlbVAt"
  >
    /* An int */
  </div>
  <span>
    Int
  </span>
</code>
`;

exports[`renders given a complex type 1`] = `
<code
  className="sc-bdVaJa eOofRl"
>
  {
  <div
    className="sc-bwzfXH uTxCW"
  >
      
    <span
      className="sc-htpNat dJsUWn"
    >
      field_one
    </span>
    : 
    <span>
      String
    </span>
  </div>
  <div
    className="sc-bwzfXH uTxCW"
  >
      
    <span
      className="sc-htpNat dJsUWn"
    >
      field_two
    </span>
    : 
    <span>
      String
    </span>
  </div>
  <div
    className="sc-bwzfXH uTxCW"
  >
      
    <span
      className="sc-htpNat dJsUWn"
    >
      field_three
    </span>
    : 
    <span>
      String
    </span>
  </div>
  <div
    className="sc-bwzfXH uTxCW"
  >
      
    <span
      className="sc-htpNat dJsUWn"
    >
      nested_field
    </span>
    : 
    <span>
      Dict.3
    </span>
  </div>
  }
</code>
`;
